--- a/AgendaEntregas/pom.xml
+++ b/AgendaEntregas/pom.xml
@@ -68,6 +68,13 @@
 			<version>42.7.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.github.dozermapper</groupId>
+			<artifactId>dozer-core</artifactId>
+			<version>7.0.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
