--- a/AgendaEntregas/src/main/resources/application.yml
+++ b/AgendaEntregas/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     password: gusta
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
