Add swagger documentation

--- a/AgendaEntregas/src/main/resources/application.yml
+++ b/AgendaEntregas/src/main/resources/application.yml
@@ -13,3 +13,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
     show-sql: false
+spring-doc:
+  paths-to-match: /entrega/**
+  swagger-ui:
+    use-root-path: true
