--- a/AgendaEntregas/Dockerfile
+++ b/AgendaEntregas/Dockerfile
@@ -1,3 +1,3 @@
 FROM eclipse-temurin:21-jdk
-ADD target/*.jar AgendaEntregas-0.0.1-SNAPSHOT.jar
-ENTRYPOINT ["java", "-jar", "AgendaEntregas-0.0.1-SNAPSHOT.jar"]
+COPY target/*.jar app.jar
+ENTRYPOINT ["java","-jar","/app.jar"]
